# jwst-wallpaper

./: .gitignore  README.md  pyproject.toml
src/jwst_wallpaper/: __init__.py  cache.py  cli.py  config.py  mast.py  render_5filter_v34.py  renderer.py  wallpaper.py
tests/: test_cache.py  test_renderer.py  test_wallpaper.py
