[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jwst-wallpaper"
version = "0.1.0"
description = "Download JWST FITS science data from MAST and render it as desktop wallpaper"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["jwst", "astronomy", "wallpaper", "fits", "mast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "astropy>=6.0",
    "astroquery>=0.4.7",
    "numpy>=1.26",
    "Pillow>=10.0",
    "matplotlib>=3.8",
    "typer>=0.12",
    "rich>=13.0",
    "platformdirs>=4.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
jwst-wallpaper = "jwst_wallpaper.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
